--- a/EarthquakeGame/package.json
+++ b/EarthquakeGame/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@gluestack-style/react": "^1.0.56",
+    "@gluestack-ui/config": "^1.1.18",
     "@gluestack-ui/themed": "^1.1.26",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
