--- a/EarthquakeGame/package.json
+++ b/EarthquakeGame/package.json
@@ -21,6 +21,7 @@
     "@gluestack-ui/themed": "^1.1.26",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@reduxjs/toolkit": "^2.2.5",
     "expo": "~51.0.9",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.6",
@@ -40,7 +41,9 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^13.4.0",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
