--- a/EarthquakeGame/package.json
+++ b/EarthquakeGame/package.json
@@ -21,6 +21,7 @@
     "@gluestack-ui/themed": "^1.1.26",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.5",
     "expo": "~51.0.9",
     "expo-constants": "~16.0.2",
